2.0.91 (2.1.0 rc2):
-Add: Full GUI support for album artist tags including the CD ripper
-Change: Replace uses of fixed pixel metrics with sizes based on the default font size

2.0.90 (2.1.0 rc1):
-Add: Hide main window when started with --replaygain argument
-Add: Option to eject CD after ripping has been completed (enabled by default)
-Add: New space holder for the "meta data" naming mode that contains the source directory
-Add: Configuration options for cdparanoia
-Add: icedax ripper plugin
-Add: Copy album artist tags
-Change: Remember last folder for add files/directory/playlist dialogs
-Change: Add symlinked files to file list

2.0.5:
-Add: Catalan translation
-Add: Swedish translation
-Add: Chinese (Taiwan) translation
-Add: Romanian translation
-Fix: Don't mix up total tracks and total discs when reading vorbis comments

2.0.4:
-Add: Slovenian translation

2.0.3:
-Fix: Update normalize filter widget properly
-Fix: Show more than one filter widget at a time
-Fix: Load normalize options properly from saved profiles (could lead to a crash)

2.0.2:
-Add: Italian translation
-Fix: Find normalize properly

2.0.1:
-Add: French translation

2.0.0:
-Add: Update translations
-Remove: French translation (only 58% translated)

1.9.90 (2.0.0 rc1):
-Add: Option to not modify the audio stream of mp3 files when calculating Replay Gain
-Add: libav plugin
-Fix: Modify mp3 stream when forcing the recalculation of Replay Gain
-Fix: Don't try to calculate Replay Gain if it is impossible
-Fix: Down/upmixing with sox
-Fix: Sox effects wouldn't work
-Fix: Recognice mp3 and amr nb encoding support in ffmpeg/libav plugins
-Fix: Crash when encoding with sox and without filters
-Fix: Calculate Replay Gain if there is only one track in the album

1.9.80 (2.0.0 beta1):
-Add: Parallel Replay Gain calculation in the Replay Gain tool
-Add: Move tracks to new Album via context menu in the Replay Gain tool
-Add: sox plugin with support for some new file formats (8svx, aiff, amr wb)